[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Maps/3.jpg" type="Texture" id=2]
[ext_resource path="res://UI/MapNode.gd" type="Script" id=3]
[ext_resource path="res://Assets/Custom/button-3.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Fonts/kenvector_future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Items/locked.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="MapNode" type="Control"]
margin_right = 109.0
margin_bottom = 104.0
rect_min_size = Vector2( 250, 300 )
rect_scale = Vector2( 1.2, 1.2 )
mouse_filter = 1
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.172549, 0.160784, 0.160784, 0.843137 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 295.0
rect_min_size = Vector2( 240, 290 )

[node name="MapIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
texture = ExtResource( 2 )
expand = true

[node name="ColorBG" type="ColorRect" parent="MarginContainer/VBoxContainer/MapIcon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
rect_min_size = Vector2( 0, 40 )
color = Color( 0, 0, 0, 0.560784 )

[node name="MapName" type="Label" parent="MarginContainer/VBoxContainer/MapIcon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
custom_fonts/font = SubResource( 1 )
text = "Hello"
align = 1
valign = 1

[node name="GoButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 240.0
margin_bottom = 284.0
rect_min_size = Vector2( 240, 40 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Go"
align = 1
valign = 1

[node name="LockScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.101961, 0.101961, 0.698039 )

[node name="TextureRect" type="TextureRect" parent="LockScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/GoButton" to="." method="_on_GoButton_pressed"]
